--- a/src/components/Overview/Overview.module.css
+++ b/src/components/Overview/Overview.module.css
@@ -44,24 +44,6 @@
   color: rgba(1, 38, 92, 0.68);
 }
 
-@media only screen and (max-width: 414px) {
-  .exchange {
-    height: 425px;
-  }
-
-  .saw {
-    height: 336px;
-  }
-
-  .paymentGateway {
-    height: 476px;
-  }
-
-  .smartCard {
-    height: 432px;
-  }
-}
-
 .row {
   margin-top: 8px;
 }
